--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.3' apply false
@@ -7,3 +17,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
