--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,17 @@
 
     <application
         android:allowBackup="true"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactor"
         android:icon="@mipmap/ic_launcher_mainicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_mainicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NailZip"
         tools:replace="android:appComponentFactory"
-        android:appComponentFactory="android.support.v4.app.CoreComponentFactor"
-        tools:targetApi = "p">
+        tools:targetApi="p">
+        <activity
+            android:name=".ShopInfoActivity"
+            android:exported="false" />
         <activity
             android:name=".member.StoreInfoActivity"
             android:exported="false" />
