--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,23 @@
     package="com.example.nailzip">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.DIAL_PHONE" />
 
     <application
         android:allowBackup="true"
         android:appComponentFactory="android.support.v4.app.CoreComponentFactor"
         android:icon="@mipmap/ic_launcher_mainicon"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_mainicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NailZip"
         tools:replace="android:appComponentFactory"
         tools:targetApi="p">
+        <activity
+            android:name=".member.SearchAddressActivity"
+            android:exported="false" />
         <activity
             android:name=".ShopInfoActivity"
             android:exported="false" />
@@ -60,6 +66,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
