--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,15 @@
         android:appComponentFactory="android.support.v4.app.CoreComponentFactor"
         android:icon="@mipmap/ic_launcher_mainicon"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_mainicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NailZip"
+        android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory"
         tools:targetApi="p">
+        <activity
+            android:name=".LocationActivity"
+            android:exported="false" />
         <activity
             android:name=".member.SearchAddressActivity"
             android:exported="false" />
@@ -74,6 +77,10 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAYja3pzaGXKki6U7f5ZRC5xVEmVfnH2uY" />
     </application>
 
 </manifest>
