--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-config:21.1.0'
     implementation 'com.github.bumptech.glide:glide:4.14.1'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -69,5 +70,8 @@ dependencies {
     //google map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //Post
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 }
