--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
 
     //Post
 //    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
 
 }
